--- a/frontent/public/index.html
+++ b/frontent/public/index.html
@@ -15,7 +15,7 @@
               <div class="hero-section-label-2 row">
                    <div class="col-md-3 col-12 btn" style="margin-left: 100px;"><a href="add_lead.html">ADD LEAD</a></div>
                    <div class="col-md-3 col-12 btn"><a href="search_lead.html" >SEARCH LEAD</a></div>
-                    <div class="col-md-3 col-12 btn"><a href="display_lead.php" >DISPLAY LEADS</a></div>
+                    <div class="col-md-3 col-12 btn"><a href="display_lead.html" >DISPLAY LEADS</a></div>
               </div>
 
 
