--- a/frontent/public/search_lead.html
+++ b/frontent/public/search_lead.html
@@ -9,6 +9,10 @@
 
     <body>
 
+      <div class="button">
+        <a class="button" href="index.html">Back to Home Page</a>
+      </div>
+
       <section class="hero-section">
         <div class="hero-section-layer-1">
                <h4>SEARCH LEAD</h4>
