--- a/frontent/public/display_lead.html
+++ b/frontent/public/display_lead.html
@@ -9,6 +9,10 @@
     <link rel="stylesheet" href="../assets/for-css/display_lead.css">
 </head>
 <body>
+     
+    <div class="button">
+        <a class="button" href="index.html">Back to Home Page</a>
+    </div>
   
     <div class="container mt-5">
         <h1 class="text-center">Leads List</h1>
