--- a/frontent/public/search_lead.html
+++ b/frontent/public/search_lead.html
@@ -17,15 +17,15 @@
         <div class="hero-section-layer-1">
                <h4>SEARCH LEAD</h4>
                  <div class="hero-section-lead-search">
-                    <form action="" method="POST">
+                    <form action="" id="searchLeadByName">
                      <label style="margin-bottom: 5px;">Search Lead By Name :</label><br>
-                     <input type="text"  name="name"required><br>
+                     <input type="text" id="namefield" name="name"required><br>
                      <span class="error"></span><br>
                      <input type="submit" name="submit">
                     </form>
                 </div>
 
-                     <div class="table-responsive mt-4" style="display: none;">
+                     <div class="table-responsive mt-4">
                      <h2 class="mb-4">Matching Leads</h2>
                         <table class="table table-bordered border-dark table-striped">
                           <thead class="table-dark">
