--- a/frontent/public/searchleadfor_addcontact.html
+++ b/frontent/public/searchleadfor_addcontact.html
@@ -34,6 +34,7 @@
                                   <th>Name</th>
                                   <th>Email</th>
                                   <th>Phone</th>
+                                  <th>Action</th>
                               </tr>
                           </thead>
                           <tbody id="tablebody">
@@ -46,6 +47,6 @@
 
       </section>
 
-      <script src="../assets/for-js/lead/search_lead.js"></script>
+      <script src="../assets/for-js/lead/searchleadfor_addcontact.js"></script>
     </body>
 </html>
