--- a/frontent/public/index.html
+++ b/frontent/public/index.html
@@ -21,8 +21,8 @@
 
               <div class="hero-section-label-2 row">
                    <div class="col-md-3 col-12 btn" style="margin-left: 100px;"><a href="searchleadfor_addcontact.html" >ADD CONTACT</a></div>
-                   <div class="col-md-3 col-12 btn"><a href="search-lead.php" >SEARCH CONTACT</a></div>
-                    <div class="col-md-3 col-12 btn"><a href="display-leads.php" >DISPLAY CONTACT</a></div>
+                   <div class="col-md-3 col-12 btn"><a href="search_contact.html" >SEARCH CONTACT</a></div>
+                    <div class="col-md-3 col-12 btn"><a href="display_contact.html" >DISPLAY CONTACT</a></div>
               </div>
 
               <div>
