--- a/frontent/public/index.html
+++ b/frontent/public/index.html
@@ -26,7 +26,7 @@
               </div>
 
               <div>
-                   <div class="hero-section-lead-display"><a href="display-lead-contact.php">DISPLAY LEAD WITH CONTACT</a></div>
+                   <div class="hero-section-lead-display"><a href="displayLeadwithContact.html">DISPLAY LEAD WITH CONTACT</a></div>
               </div>
 
 
