--- a/frontent/public/display_lead.html
+++ b/frontent/public/display_lead.html
@@ -18,7 +18,7 @@
         <h1 class="text-center">Leads List</h1>
         <table class="table table-bordered table-striped mt-4">
             <thead class="table-dark">
-                <tr>
+                <tr class="text-center">
                     <th>ID</th>
                     <th>Name</th>
                     <th>Address</th>
